--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,14 +7,13 @@
             <h1><a href="/">Blog Django Girls</a></h1>
         </div>
 
-        <div>
-            <h1>Hi there!</h1>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
 
-        <div>
-            <h2>It works!</h2>
-        </div>
-        
-        <strong> Be patient, we are under construction!! YEEEY :D </strong>
     </body>
 </html>
